src/css/simple-sidebar.css
/*!
 * Start Bootstrap - Simple Sidebar (http://startbootstrap.com/)
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */

 body {
    overflow-x: hidden;
 }

/* Toggle Styles */

#wrapper {
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: #000;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    width: 100%;
    position: absolute;
    /*padding: 15px;*/
}

#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 230px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
    color: #fff;;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999999;
}


.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

/* Hamburger button */

.hamburger {
    background: transparent;
    border: none;
    cursor: pointer;
    display: block;
    height: 32px;
    padding: 0;
    position: relative;
    width: 32px;
}

.hamburger:hover,
.hamburger:focus,
.hamburger:active {
    outline: none;
}

.hamb-top,
.hamb-middle,
.hamb-bottom {
    background-color: rgba(255,255,255,0.7);
    border-radius: 2px;
    height: 3px;
    left: 0;
    position: absolute;
    width: 100%;
    -webkit-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.hamburger.is-closed .hamb-top    { top: 6px; }
.hamburger.is-closed .hamb-middle { top: 14px; }
.hamburger.is-closed .hamb-bottom { top: 22px; }

.hamburger.is-open .hamb-top {
    background-color: #fff;
    top: 14px;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.hamburger.is-open .hamb-middle {
    opacity: 0;
}

.hamburger.is-open .hamb-bottom {
    background-color: #fff;
    top: 14px;
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
}

/* Dark overlay */

.overlay {
    background-color: rgba(0,0,0,0.4);
    bottom: 0;
    display: none;
    height: calc(100% - 52px);
    left: 0;
    position: fixed;
    right: 0;
    top: 52px;
    width: 100%;
    z-index: 500;
}

/* Sidebar nav item hover sweep animation */

.sidebar-nav li.site {
    position: relative;
}

.sidebar-nav li.site::before {
    background-color: rgba(255,255,255,0.15);
    content: '';
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    -webkit-transition: width .2s ease-in;
    transition: width .2s ease-in;
    width: 3px;
    z-index: 0;
}

.sidebar-nav li.site:hover::before {
    width: 100%;
}

.sidebar-nav li.site a,
.sidebar-nav li.site .favorite-star {
    position: relative;
    z-index: 1;
}

/*Commented out media wiki to ensure that sidebar is closed when app opens and map div loads as the correct width*/
/*@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {*/
        /*padding: 20px;*/
        /*position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}*/

